force-app/main/default/objects/Account_Risk__c/Account_Risk__c.object-meta.xml
<CustomObject>
    <description>This object contains the risks associated with an accounts which we received from the mulesoft</description>
    <label>Account Risk</label>
    <nameField>
        <displayFormat>AR-{00000}</displayFormat>
        <label>Account Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Risks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>