force-app/main/default/objects/Account_Risk__c/fields/Account_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>Account External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>