force-app/main/default/objects/Account_Risk__c/fields/Account_Maturity__c.field-meta.xml
<CustomField>
    <fullName>Account_Maturity__c</fullName>
    <formula>IF( 
   AND( 
      NOT( ISNULL(Account__r.Close_Won_Date__c )),
      TODAY() - Account__r.Close_Won_Date__c &gt; 90
      ),
   TRUE, 
   FALSE
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Maturity</label>
    <type>Checkbox</type>
</CustomField>