force-app/main/default/objects/Account_Risk__c/fields/Adoption_Score__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Score__c</fullName>
    <description>Adoption Score from snowflake</description>
    <label>Adoption Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>