force-app/main/default/objects/Account_Risk__c/fields/CX_Score__c.field-meta.xml
<CustomField>
    <fullName>CX_Score__c</fullName>
    <description>CX Score from the snowflake used in RRM project for CS</description>
    <label>CX Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>