force-app/main/default/objects/Account_Risk__c/fields/CX_Score_Status__c.field-meta.xml
<CustomField>
    <fullName>CX_Score_Status__c</fullName>
    <description>Status of the Account</description>
    <label>CX Score Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>