force-app/main/default/objects/Account_Risk__c/fields/CX_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>CX_Updated_Date__c</fullName>
    <description>When risk is updated from cx status</description>
    <label>CX Updated Date</label>
    <type>DateTime</type>
</CustomField>