force-app/main/default/objects/Account_Risk__c/fields/Entitlements__c.field-meta.xml
<CustomField>
    <fullName>Entitlements__c</fullName>
    <label>Entitlements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>