force-app/main/default/objects/Account_Risk__c/fields/ML_Risk__c.field-meta.xml
<CustomField>
    <fullName>ML_Risk__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Risk analyzed by ML</inlineHelpText>
    <label>ML Risk</label>
    <type>Checkbox</type>
</CustomField>