force-app/main/default/objects/Account_Risk__c/fields/ML_Risk_Quarter__c.field-meta.xml
<CustomField>
    <fullName>ML_Risk_Quarter__c</fullName>
    <description>In which quarter and year the risk was predicted</description>
    <label>ML Risk Quarter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>