force-app/main/default/objects/Account_Risk__c/fields/ML_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>ML_Updated_Date__c</fullName>
    <description>When account risk is updated</description>
    <label>ML Updated Date</label>
    <type>DateTime</type>
</CustomField>