force-app/main/default/objects/Account_Risk__c/fields/Need_Update__c.field-meta.xml
<CustomField>
    <fullName>Need_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Update</label>
    <type>Checkbox</type>
</CustomField>