force-app/main/default/objects/Account_Risk__c/fields/OnBoarding_Score__c.field-meta.xml
<CustomField>
    <fullName>OnBoarding_Score__c</fullName>
    <label>OnBoarding Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>