force-app/main/default/objects/Account_Risk__c/fields/Product_Pillar_1__c.field-meta.xml
<CustomField>
    <fullName>Product_Pillar_1__c</fullName>
    <label>Product Pillar 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>