force-app/main/default/objects/Account_Risk__c/fields/Product_Score__c.field-meta.xml
<CustomField>
    <fullName>Product_Score__c</fullName>
    <description>Product Score from snowflake</description>
    <label>Product Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>