force-app/main/default/objects/Account_Risk__c/fields/Risk_Type__c.field-meta.xml
<CustomField>
    <fullName>Risk_Type__c</fullName>
    <description>Type of risk</description>
    <label>Risk Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>