force-app/main/default/objects/Account_Risk__c/fields/Support_Score__c.field-meta.xml
<CustomField>
    <fullName>Support_Score__c</fullName>
    <description>Support Score from snowflake</description>
    <label>Support Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>